version/0.66/_sources/autoapi/pyedb/configuration/cfg_operations/CfgCutout.rst.txt






:class:`CfgCutout`
==================


.. py:class:: pyedb.configuration.cfg_operations.CfgCutout(/, **data: Any)

   Bases: :py:obj:`pydantic.BaseModel`


   
   !!! abstract "Usage Documentation"
       [Models](../concepts/models.md)

   A base class for creating Pydantic models.

   Attributes:
       __class_vars__: The names of the class variables defined on the model.
       __private_attributes__: Metadata about the private attributes of the model.
       __signature__: The synthesized `__init__` [`Signature`][inspect.Signature] of the model.

       __pydantic_complete__: Whether model building is completed, or if there are still undefined fields.
       __pydantic_core_schema__: The core schema of the model.
       __pydantic_custom_init__: Whether the model has a custom `__init__` function.
       __pydantic_decorators__: Metadata containing the decorators defined on the model.
           This replaces `Model.__validators__` and `Model.__root_validators__` from Pydantic V1.
       __pydantic_generic_metadata__: Metadata for generic models; contains data used for a similar purpose to
           __args__, __origin__, __parameters__ in typing-module generics. May eventually be replaced by these.
       __pydantic_parent_namespace__: Parent namespace of the model, used for automatic rebuilding of models.
       __pydantic_post_init__: The name of the post-init method for the model, if defined.
       __pydantic_root_model__: Whether the model is a [`RootModel`][pydantic.root_model.RootModel].
       __pydantic_serializer__: The `pydantic-core` `SchemaSerializer` used to dump instances of the model.
       __pydantic_validator__: The `pydantic-core` `SchemaValidator` used to validate instances of the model.

       __pydantic_fields__: A dictionary of field names and their corresponding [`FieldInfo`][pydantic.fields.FieldInfo] objects.
       __pydantic_computed_fields__: A dictionary of computed field names and their corresponding [`ComputedFieldInfo`][pydantic.fields.ComputedFieldInfo] objects.

       __pydantic_extra__: A dictionary containing extra values, if [`extra`][pydantic.config.ConfigDict.extra]
           is set to `'allow'`.
       __pydantic_fields_set__: The names of fields explicitly set during instantiation.
       __pydantic_private__: Values of private attributes set on the model instance.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CfgCutout

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~auto_identify_nets`
            - 
          * - :py:attr:`~signal_list`
            - 
          * - :py:attr:`~reference_list`
            - 
          * - :py:attr:`~extent_type`
            - 
          * - :py:attr:`~expansion_size`
            - 
          * - :py:attr:`~number_of_threads`
            - 
          * - :py:attr:`~custom_extent`
            - 
          * - :py:attr:`~custom_extent_units`
            - 
          * - :py:attr:`~expansion_factor`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.configuration.cfg_operations import CfgCutout


Attribute detail
----------------

.. py:attribute:: auto_identify_nets
   :type:  CfgAutoIdentifyNets | None

.. py:attribute:: signal_list
   :type:  Optional[List[str]]
   :value: None


.. py:attribute:: reference_list
   :type:  Optional[List[str]]
   :value: None


.. py:attribute:: extent_type
   :type:  Optional[str]
   :value: 'ConvexHull'


.. py:attribute:: expansion_size
   :type:  Optional[Union[float, str]]
   :value: 0.002


.. py:attribute:: number_of_threads
   :type:  Optional[int]
   :value: 1


.. py:attribute:: custom_extent
   :type:  Optional[Any]
   :value: None


.. py:attribute:: custom_extent_units
   :type:  str
   :value: None


.. py:attribute:: expansion_factor
   :type:  Optional[float]
   :value: 0






